Fix: fixed navlink position on mobile device

--- a/src/components/ui/navlinks/navlinks.css
+++ b/src/components/ui/navlinks/navlinks.css
@@ -41,7 +41,7 @@
   .nav-links {
     display: none;
     position: absolute;
-    top: 92px;
+    top: 10vh;
     left: 0;
     width: 100%;
     background: white;
